[package]
name = "alloy-signer-trezor"
description = "Ethereum Trezor signer"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy-consensus = { workspace = true, features = ["std"] }
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-signer.workspace = true

trezor-client = { git = "https://github.com/TuDo1403/trezor-client", rev = "1b3b856", default-features = false, features = [
    "ethereum",
] }

async-trait.workspace = true
semver.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-rpc-types-eth.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
